testsuite/tests/tool-toplevel/unnamed_layouts_2.compilers.reference
Line 15, characters 0-13:
15 | let _ = #3.14;;
     ^^^^^^^^^^^^^
Error: Types of unnamed expressions must have layout value when using
       the toplevel, but this expression has layout "float64".

